Add normalized 987-F.68 data and restructure files

--- a/978-F.68/T-SP-F.68-2011-MSW-F.adoc
+++ b/978-F.68/T-SP-F.68-2011-MSW-F.adoc
@@ -31,579 +31,30 @@
 
 == Liste des Codes Télex de Destination (CTD) et des Codes d'Identification des Réseaux Télex (CIRT)
 
-
-NOTE: Les codes sans indication ne sont pas encore attribués.
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|100-149 | |Provisoirement réservés pour les services administratifs spéciaux
-|150-159 | |Provisoirement réservés pour les services administratifs spéciaux
-|160 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|161 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|162 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|163 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|164 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|165 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|166 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|167 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|168 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|169 |X |Radiotélex mobile maritime en ondes décamétriques et hectométriques
-|170-179 | |Provisoirement réservés pour les services administratifs spéciaux
-|180-199 | |Provisoirement réservés pour les services administratifs spéciaux
-|200 |UA |Alaska (Etats-Unis d'Amérique)
-|201 |DR |Dominicaine (République) (CDT)
-|202 |DI |Dominicaine (République) (AACR)
-|203{blank}footnote:[Réservé] |HN |Haïti (République d')
-|204 |QN |Saint-Pierre-et-Miquelon (Collectivité territoriale de la République française)
-|205 |PT |Puerto Rico (MCI/WUI)
-|206 |PD |Puerto Rico (AACR)
-|207 | |
-|208 |VN |Vierges américaines (Iles)
-|209 | |Puerto Rico (PRCA)
-|21 |CA |Canada
-|22 |ME |Mexique
-|23{blank}footnote:[Bloc attribué aux Etats-Unis d’Amérique.] | |Etats-Unis d'Amérique
-|230 |UD |Etats-Unis d'Amérique (AT&T)
-|231 |UT |Etats-Unis d'Amérique (TRT/FTC)
-|232 |UR |Etats-Unis d'Amérique (MCI/WUI)
-|233 |UB |Etats-Unis d'Amérique (GRAPHNET)
-|234 |UI |Etats-Unis d'Amérique (AT&T)
-|235 | |Etats-Unis d'Amérique (AT&T EasyLink Services Network)
-|236 |UW |Etats-Unis d'Amérique (MCI/WUI)
-|237 |UC |Etats-Unis d'Amérique (CCI)
-
-|===
-
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|238 |UF |Etats-Unis d'Amérique (TRT/FTC)
-|239 |UE |Etats-Unis d'Amérique (TELENET)
-|240 | |Puerto Rico (TRT/FTC)
-|241 |DA |Dominicaine (République) (MIRADOR)
-|242 | |
-|243 | |
-|244 | |
-|245 | |
-|246 |UJ |Etats-Unis d'Amérique (MMR)
-|247 | |Etats-Unis d'Amérique
-|248 | |Etats-Unis d'Amérique
-|249 | |Etats-Unis d'Amérique
-|25 |UQ |Etats-Unis d'Amérique (AT&T)
-|26{blank}footnote:[Attribué auparavant au Canada (voir le Bulletin d’exploitation de l’UIT No 581 du 1.X.1994).] | |
-|270 | |
-|271 | |
-|272 | |
-|273 | |
-|274 | |
-|275 | |
-|276 | |
-|277 | |
-|278 | |
-|279 | |
-|28 |CU |Cuba
-|290 |BA |Bermudes
-|291 |JA |Jamaïque
-|292 |VB |Vierges britanniques (Iles)
-|293 |CP |Cayman (Iles)
-|294{blank}footnote:[Réservé] |WG |Trinité-et-Tobago
-|295 {blank}footnote:[Réservé] |GY |Guyana
-|296 |TQ |Turques et Caïques (Iles)
-|297 |BS |Bahamas (Commonwealth des)
-|298 |MR |Martinique (Département français de la)
-|299 |GL |Guadeloupe (Département français de la)
-|300 |FG |Guyane (Département français de la)
-|301 | |
-|302 | |
-|303 |AW |Aruba
-
-|===
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|304{blank}footnote:[Réservé.] |SN |Suriname (République du)
-|305 |PY |Paraguay (République du)
-|306 |FK |Falkland (Iles) (Malvinas)
-|307 | |
-|308 |ED |Equateur
-|309 |BV |Bolivie (République de) (ENTEL)
-|31 |VE |Venezuela (République bolivarienne du) (CANTV)
-|32 |UY |Uruguay (République orientale de l')
-|33 |AR |Argentine (République)
-|34{blank}footnote:[Bloc attribué au Chili.] | |Chili
-|340 | |
-|341 | |
-|342 |CL |Chili (TElex Chile)
-|343 |CK |Chili (VTR)
-|344 |CZ |Chili (VTR/CM)
-|345 |CB |Chili (ENTEL-CHILE)
-|346 |CT |Chili (TEXCOM)
-|347 | |
-|348 | |
-|349 | |
-|35 |CO |Colombie (République de)
-|36 |PE |Pérou
-|37 | |Amérique centrale (code intégré):
-|371 |BZ |Belize
-|372 |GU |Guatemala (République du)
-|373 |SR |El Salvador (République d')
-|374 |HO |Honduras (République du)
-|375 |NU |Nicaragua
-|376 |CR |Costa Rica
-|377 | |
-|378 |PP |Panama (République du) (Advanced Communication Network, S.A.)
-|379 |PG |Panama (République du) (INTEL)
-|38 |BR |Brésil (République fédérative du)
-|390{blank}footnote:[Réservé.] |NA |Curaçao (anciennement Antilles néerlandaises)
-|391 |LA |Anguilla
-|392 |WB |Barbade
-|393 |AK |Antigua-et-Barbuda
-|394 |DO |Dominique (Commonwealth de la)
-|395 |GA |Grenade
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|396 |MK |Montserrat
-|397 |KC |Saint-Kitts-et-Nevis
-|398 |LC |Sainte-Lucie
-|399 |VQ |Saint-Vincent-et-Grenadines
-|400 |GC |Monténégro (République du)
-|401 | |
-|402{blank}footnote:[Réservé.] |LU |Luxembourg
-|403 |MT |Malte (GTC)
-|404 |P |Portugal
-|405 |GK |Gibraltar
-|406{blank}footnote:[Réservé.] |MW |Malte (Go plc)
-|407 |M |Maroc (Royaume du)
-|408 |DZ |Algérie (République algérienne démocratique et populaire)
-|409 |TN |Tunisie
-|41 |D |Allemagne (République fédérale d')
-|42 |F |France
-|42 |MC |Monaco (Principauté de)
-|43 |I |Italie
-|44 |NL |Pays-Bas (Royaume des)
-|45 |CH |Suisse (Confédération)
-|45 |FL |Liechtenstein (Principauté de)
-|46 |B |Belgique
-|47{blank}footnote:[Réservé.] |A |Autriche
-|480 | |
-|481 | |
-|482 | |
-|483 | |
-|484 | |
-|485 | |
-|486 | |
-|487 | |
-|488 | |
-|489 | |
-|490 |BN |Bahreïn (Royaume de)
-|491 |IK |Iraq (République d')
-|492 |SY |République arabe syrienne
-|493 |JO |Jordanie (Royaume hachémite de)
-|494 |LE |Liban
-|495 |SJ |Arabie saoudite (Royaume d')
-|496 |KT |Koweït (Etat du)
-|497 |DH |Qatar (Etat du)
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|498 |ON |Oman (Sultanat d')
-|499 | |
-|500 |EI |Irlande
-|501{blank}footnote:[Réservé.] |IS |Islande
-|502{blank}footnote:[Réservé.] |FA |Féroé (Iles) (Danemark)
-|503 |GD |Groenland (Danemark)
-|504 {blank}footnote:[Réservé.] |VA |Cité du Vatican (Etat de la)
-|505 |SO |Saint-Marin (République de)
-|506 | |
-|507 | |
-|508 | |
-|509 | |
-|51 |G |Royaume-Uni de Grande-Bretagne et d'Irlande du Nord
-|52 |E |Espagne
-|530 | |
-|531 | |
-|532 | |
-|533 | |
-|534 | |
-|535 | |
-|536 | |
-|537 |EE |Estonie (République d')
-|538 |LV |Lettonie (République de)
-|539 |LT |Lituanie (République de)
-|54 |S |Suède
-|55{blank}footnote:[Réservé.] |DK |Danemark
-|56 |N |Norvège
-|57 |FI |Finlande
-|580 |X |Service mobile maritime par satellite (disponible)
-|581 |X |Région du satellite de l'Atlantique Est, INMARSAT
-|582 |X |Région du satellite du Pacifique, INMARSAT
-|583 |X |Région du satellite de l'océan Indien, INMARSAT
-|584 |X |Région du satellite de l'Atlantique Ouest, INMARSAT
-|585 |X |Service mobile maritime par satellite (disponible)
-|586 |X |Service mobile maritime par satellite (disponible)
-|587 |X |Service mobile maritime par satellite (disponible)
-|588 |X |Service mobile maritime par satellite (disponible)
-|589 |X |Service mobile maritime par satellite (disponible)
-|590 {blank}footnote:[Réservé.] |AD |Andorre (Principauté d')
-|591 | |
-|592 | |
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|593 | |
-|594 | |
-|595 | |
-|596 | |
-|597 |MB |L'ex-République yougoslave de Macédoine
-|598 |SI |Slovénie (République de)
-|599 |RH |Croatie (République de)
-|600{blank}footnote:[Réservé.] |BH |Bosnie-Herzégovine
-|601 |GR |Grèce
-|602 | |
-|603 | |
-|604 |AB |Albanie (République d')
-|605 |CY |Chypre (République de)
-|606 |IL |Israël (Etat d')
-|607 |TR |Turquie
-|608 | |
-|609 | |
-|61{blank}footnote:[Réservé.] |H |Hongroise (République de)
-|62{blank}footnote:[Réservé.] |YU |Serbie (République de)
-|63{blank}footnote:[Réservé.] |PL |Pologne (République de)
-|64 |RU |Fédération de Russie
-| |SU{blank}footnote:[Attribué auparavant à l’ex-URSS (voir le Bulletin d’exploitation de l’UIT No 584 du 15.XI.1994).] |
-|65 |R |Roumanie
-|660 | |
-|661 | |
-|662 | |
-|663{blank}footnote:[Réservé.] |C |République tchèque
-|664 | |
-|665 | |
-|666{blank}footnote:[Réservé.] |SK |République slovaque
-|667 | |
-|668 | |
-|669 | |
-|67{blank}footnote:[Réservé.] |BG |Bulgarie (République de)
-|680 |UX |Ukraine
-|681 |BY |Bélarus (République du)
-|682 |MD |Moldova (République de)
-|683 |GI |Géorgie
-|684 |AM |Arménie (République d')
-
-|===
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|685 | |
-|686 | |
-|687 | |
-|688 | |
-|689 | |
-|69{blank}footnote:[Attribué auparavant à l’ex-République démocratique allemande (voir le Bulletin d’exploitation de l’UIT No 571 du 1.V.1994).] | |
-|700 |GM |Guam (Etats-Unis d'Amérique) (MCI/WUI)
-|701{blank}footnote:[Réservé.] |FJ |Fidji (République de)
-|702 |FP |Polynésie française (Territoire français d'outre-mer)
-|703{blank}footnote:[Réservé.] |NE |Papouasie-Nouvelle-Guinée
-|704 |HR |Hawaï (Etats-Unis d'Amérique) (MCI/WUI)
-|705 | |Hawaï (Etats-Unis d'Amérique) (MCI/WUI)
-|706{blank}footnote:[Réservé.] |NM |Nouvelle-Calédonie (Territoire français d'outre-mer)
-|707 |WF |Wallis-et-Futuna (Territoire français d'outre-mer)
-|708 |HW |Hawaï (Etats-Unis d'Amérique) (MCI/WUI)
-|709 | |Hawaï (Etats-Unis d'Amérique) (WUH)
-|71 |AA |Australie
-|72 |J |Japon
-|73 |IA |Indonésie (République d')
-|74 |NZ |Nouvelle-Zélande
-|75{blank}footnote:[Bloc attibué à la République des Philippines.] | |Philippines (République des)
-|750 | |
-|751 |PS |Philippines (République des) (CAPWIRE)
-|752 |PH |Philippines (République des) (PHILCOM)
-|753 | |
-|754 |PM |Philippines (République des) (GMCR)
-|755 | |
-|756 |PN |Philippines (République des) (ETPI)
-|757 |PI |Philippines (République des) (RCPI)
-|758 |PU |Philippines (République des) (PTT)
-|759 | |
-|760 |MN |Mariannes du Nord (Iles) (Commonwealth des)
-|761 |KI |Kiribati (République de)
-|762 | |Tokélau
-|763 |PW |Palau (République de)
-|764 |FM |Micronésie (Etats fédérés de)
-|765 |MS |Marshall (Iles) (République des)
-|766 | |Territoires extérieurs de l'Australie
-|767 | |
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|768 | |
-|769{blank}footnote:[Réservé.] | |
-|770 |SB |Samoa américaines
-|771{blank}footnote:[Réservé.] |NH |Vanuatu (République de)
-|772{blank}footnote:[Réservé.] |RG |Cook (Iles)
-|773 | |Hawaï (Etats-Unis d'Amérique) (DATATEL)
-|774 |TV |Tuvalu
-|775 |ZV |Nauru (République de)
-|776 |NF |Niue
-|777{blank}footnote:[Réservé.] |TS |Tonga (Royaume des)
-|778 |HQ |Salomon (Iles)
-|779{blank}footnote:[Réservé.] |SX |Samoa-(Etat indépendant du)
-|780{blank}footnote:[Réservé.] |BJ |Bangladesh (République populaire du)
-|781{blank}footnote:combinations[Les combinaisons restantes de la série 78 ne seront assignées que lorsque la réserve des codes à 3 chiffres de la région sera épuisée.] | |
-|782{blank}footnote:combinations[] | |
-|783{blank}footnote:combinations[] | |
-|784 |AI |Azerbaïdjanaise (République)
-|785 |KZ |Kazakhstan (République du)
-|786 |UZ |Ouzbékistan (République d')
-|787 |TJ |Tadjikistan (République du)
-|788 |KH |République kirghize
-|789 |TM |Turkménistan
-|79 |AF |Afghanistan
-|800 |MH |Mongolie
-|801 |K |Corée (République de)
-|802 |HX |Hong Kong, Chine
-|803 |CE |Sri Lanka (République socialiste démocratique de)
-|804 |LS |Lao (République démocratique populaire)
-|805 |VT |Viet Nam (République socialiste du)
-|806{blank}footnote:[Attribué auparavant à l'ex-République démocratique populaire du Yémen (voir le Bulletin d'exploitation de l'UIT No 579 du 1.IX.1994).] | |
-|807 |KA |Cambodge (Royaume du)
-|808 |OM |Macao, Chine
-|809 |BU |Brunéi Darussalam
-|81 |IN |Inde (République de l')
-|82{blank}footnote:[Réservé.] |PK |Pakistan (République islamique du)
-|83 |BM |Myanmar (Union de)
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|84 |MA |Malaisie
-|85 |CN |Chine (République populaire de)
-|86 |TH |Thaïlande
-|87 |RS |Singapour (République de)
-|88 |IR |Iran (République islamique d')
-|890 |BT |Bhoutan (Royaume du)
-|891 |NP |Népal
-|892 | |
-|893 |EM |Emirats arabes unis (ETISALAT)
-|894 | |
-|895{blank}footnote:[Réservé] |YE |Yémen (République du)
-|896 |MF |Maldives (République des)
-|897 | |
-|898 | |
-|899 |KP |République populaire démocratique de Corée
-|900 |SM |Somalie (République démocratique)
-|901 |LY |Jamahiriya arabe libyenne populaire et socialiste
-|902 |ZA |Zambie (République de)
-|903 |UU |Burundi (République du)
-|904 |MI |Malawi
-|905 |NG |Nigéria (République fédérale du)
-|906 |SG |Sénégal (République du)
-|907 |ZW |Zimbabwe (République du)
-|908 |WK |Namibie (République de)
-|909 |RW |Rwanda (République du)
-|91 |UN |Egypte (République arabe d')
-|920{blank}footnote:[Officillement attribué mais pas encore mis en service.] |ER |Erythrée
-|921 | |
-|922 | |
-|923 | |
-|924 | |
-|925 | |
-|926 | |
-|927 | |
-|928 | |
-|929 | |
-|930 | |
-|931 | |
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|932 | |
-|933 | |
-|934 | |
-|935 | |
-|936 | |
-|937 | |
-|938 |DG |Diego Garcia
-|939{blank}footnote:[Attribué auparavant à l’ex- Ascension.] |AV  |
-|94 |GH |Ghana
-|95 |SA |Sudafricaine (République)
-|960 |HL |Sainte-Hélène, Ascencion et Tristan da Cunha
-|961 |RE |France de l'océan Indien
-|962 |BD |Botswana (République du)
-|963 |LO |Lesotho (Royaume du)
-|964 |WD |Swaziland (Royaume du)
-|965 |SZ |Seychelles (République des)
-|966 |IW |Maurice (République de)
-|967{blank}footnote:[Réservé.] |ST |Sao Tomé-et-Principe (République démocratique de)
-|968 | |
-|969 |BI |Guinée-Bissau (République de)
-|970 |KN |Cameroun (République du)
-|971 |RC |Centrafricaine (République)
-|972 |BC |Bénin (République du)
-|973 |GO |Gabonaise (République)
-|974 |MQ |Mauritanie (République islamique de)
-|975 |NI |Niger (République du)
-|976 |KD |Tchad (République du)
-|977 |TG |Togolaise (République)
-|978 |BF |Burkina Faso
-|979 |DJ |Djibouti (République de)
-|980 |ET |Ethiopie (République fédérale démocratique d')
-|981 |KG |Congo (République du)
-|982 |CG |République démocratique du Congo
-|983 |CI |Côte d'Ivoire (République de)
-|984 |SD |Soudan (République du)
-|985 |MJ |Mali (République du)
-|986 |MG |Madagascar (République de)
-|987 |KE |Kenya (République du)
-|988 |UG |Ouganda (République de l')
-
-|===
-
-
-[%unnumbered,cols="^.^,^.^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Attribué à
-|1 |2 ^.^|3
-
-|989 |TZ |Tanzanie (République-Unie de) (continent)
-|990 |TA |Zanzibar (Tanzanie)
-|991 |AN |Angola (République d')
-|992{blank}footnote:[Réservé.] |MO |Mozambique (République du)
-|993 |CV |Cap-Vert (République du)
-|994 |KO |Comores (Union des)
-|995 |GE |Guinée (République de)
-|996 |GV |Gambie (République de)
-|997 |LI |Libéria (République du)
-|998 |SL |Sierra Leone
-|999 |EG |Guinée équatoriale (République de)
-
-|===
-
-
-*Notes:*
-
-. Plan de numérotage intégré.
-
-. Dans le cadre de ce code national, l'Administration des télécommunications de la République populaire de Chine a communiqué que le code 855 a été attribué à la province de Taiwan, Chine (Référence: Notification N° 1157 du 10 décembre 1980).
-
-. L'Administration de l'Australie informe que, dans le cadre du code intégré 766, le code télex pour:
-+
---
-- Norfolk (Ile de) est 766 3 (NV).
-- Christmas (Ile) est 766 7 (IO).
---
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-data.yaml[]
+----
 
 
 [appendix]
 == Codes de réseau des télégrammes à deux lettres qui correspondent aux codes d'identification de réseau télex (CIRT) à une lettre
 
-[%unnumbered,cols="^.^,^.^,.^",options="header"]
-|===
-|CIRT a|Codes de réseau des télégrammes à deux lettres
-^|Pays
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-appendix-1.yaml[]
+----
 
-|A |AU |Autriche
-|B |BE |Belgique
-|C |CS |République tchèque
-|D |DP |Allemagne (République fédérale d')
-|E |ES |Espagne
-|F |FR |France
-|G |GB |Royaume-Uni de Grande-Bretagne et d'Irlande du Nord
-|H |HU |Hongrie (République de)
-|I |IG, IT, IU |Italie
-|J |JP |Japon
-|K |KR |Corée (République de)
-|M |MP |Maroc (Royaume du)
-|N |NO |Norvège
-|P |PC, PJ, PO |Portugal
-|R |RM |Roumanie
-|S |SW |Suède
-
-|===
 
 [appendix]
 == Pays ou zones géographiques pour lesquels des renseignements relatifs à la cessation du service télex ont été publiés dans le bulletin d'exploitation de l'UIT (N^o^)
 
 
-[%unnumbered,cols="4*"]
-|===
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-appendix-2.yaml[]
+----
 
-^.^|_BE N°_ ^.^|Pays/Zones géographiques ^.^|_BE N°_ ^.^|Pays/Zones géographiques
-|681 |Cook (Iles) |859 |Bangladesh
-|692 |Tonga |873 |Trinité-et-Tobago
-|693 |Fidji |888 |Maurice (via Swiss Telex)
-|702 |Samoa |889 |Croatie (Gentex via Swiss Telex)
-|724 |Vanuatu |895 |Allemagne (via Swiss Telex)
-|734 |Islande |900 |Serbie
-|735 |Sao Tomé-et-Principe |905 |Royaume-Uni (via Swiss Telex)
-|749 |Autriche |906 |Yémen
-|754 |Papouasie-Nouvelle-Guinée |911 |Chypre (via Network Telex (UK))
-|758 |Vatican |911 |Tchèque
-|770 |Guyana |918 |Hong Kong, Chine (via Easylink)
-|770 |Haïti |919 |Malte (Go plc)
-|772 |Mozambique |920 |Maldives (via Swiss Telex)
-|773 |Pologne |921 |Italie (via Swiss Telex)
-|775 |Andorre |923 |Luxembourg
-|775 |Nouvelle-Calédonie |924 |Philippines (ETPI) (via Swiss Telex)
-|776 |Bosnie-Herzégovine |931 |Singapour, nouvel opérateur AimsOne Pte Ltd (via Swiss Telex)
-|799 |Hongrie |931 |Espagne (via Easy Link)
-|806 |Curaçao (anciennement Antilles néerlandaises) |940 |Bulgarie
-|806 |Féroé (Iles) (Danemark) |941 |France (via transit)
-|835 |Danemark |959 |Lituanie (via Telegraf OU (Estonie))
-|852 |Pakistan |959 |Bahreïn (via Swiss Telex)
-|853 |Slovaquie | |
-|859 |Suriname | |
-
-|===
 
 
 == ABRÉVIATIONS
@@ -671,7 +122,7 @@ WUH:: Western Union of Hawaii, Inc.
 == AMENDEMENTS
 
 [%unnumbered,cols="^.^,^.^,^.^",options="header"]
-|=== 
+|===
 |Amendement N° |Bulletin d'exploitation N° |Pays ou zone géographique
 
 |1 | |
