--- a/978-F.68/T-SP-F.68-2011-MSW-S.adoc
+++ b/978-F.68/T-SP-F.68-2011-MSW-S.adoc
@@ -32,591 +32,30 @@
 
 == Lista de Códigos Télex de Destino (CTD) y Códigos de Identificación de Red Télex (CIRT)
 
-
 NOTE: No se han atribuido todavía los códigos sin indicación.
 
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-
-|1 |2 ^.^|3
-
-|100-149 | |Reservado temporalmente para servicios administrativos especiales
-|150-159 | |Reservado temporalmente para servicios administrativos especiales
-|160 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|161 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|162 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|163 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|164 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|165 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|166 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|167 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|168 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|169 |X |Servicio radiotélex móvil marítimo en ondas decamétricas y hectométricas
-|170-179 | |Reservado temporalmente para servicios administrativos especiales
-|180-199 | |Reservado temporalmente para servicios administrativos especiales
-|200 |UA |Alaska (Estados Unidos de América)
-|201 |DR |Dominicana (República) (CDT)
-|202 |DI |Dominicana (República) (AACR)
-|203{blank}footnote:reserved[Revervado] |HN |Haití (República de)
-|204 |QN |San Pedro y Miquelón (Comunidad territorial de la República francesa)
-|205 |PT |Puerto Rico (MCI/WUI)
-|206 |PD |Puerto Rico (AACR)
-|207 | |
-|208 |VN |Vírgenes americanas (Islas)
-|209 | |Puerto Rico (PRCA)
-|21 |CA |Canadá
-|22 |ME |México
-|23{blank}footnote:[Bloque atribuido a Estados Unidos de América.] | |Estados Unidos de América
-|230 |UD |Estados Unidos de América (AT&T)
-|231 |UT |Estados Unidos de América (TRT/FTC)
-|232 |UR |Estados Unidos de América (MCI/WUI)
-|233 |UB |Estados Unidos de América (GRAPHNET)
-|234 |UI |Estados Unidos de América (AT&T)
-|235 | |Estados Unidos de América (AT&T EasyLink Services Network)
-|236 |UW |Estados Unidos de América (MCI/WUI)
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|237 |UC |Estados Unidos de América (CCI)
-|238 |UF |Estados Unidos de América (TRT/FTC)
-|239 |UE |Estados Unidos de América (TELENET)
-|240 | |Puerto Rico (TRT/FTC)
-|241 |DA |Dominicana (República) (MIRADOR)
-|242 | |
-|243 | |
-|244 | |
-|245 | |
-|246 |UJ |Estados Unidos de América (MMR)
-|247 | |Estados Unidos de América
-|248 | |Estados Unidos de América
-|249 | |Estados Unidos de América
-|25 |UQ |Estados Unidos de América (AT&T)
-|26{blank}footnote:[c)Anteriormente atribuido a Canadá (véase el Boletín de Explotación de la UIT No 581 del 1.X.1994).] | |
-|270 | |
-|271 | |
-|272 | |
-|273 | |
-|274 | |
-|275 | |
-|276 | |
-|277 | |
-|278 | |
-|279 | |
-|28 |CU |Cuba
-|290 |BA |Bermudas
-|291 |JA |Jamaica
-|292 |VB |Vírgenes británicas (Islas)
-|293 |CP |Caimanes (Islas)
-|294d) |WG |Trinidad y Tabago
-|295{blank}footnote:reserved[] |GY |Guyana
-|296 |TQ |Turquesas y Caicos (Islas)
-|297 |BS |Bahamas (Commonwealth de las)
-|298 |MR |Martinica (Departamento francés de la)
-|299 |GL |Guadalupe (Departamento francés de la)
-|300 |FG |Guyana (Departamento francés de la)
-|301 | |
-|302 | |
-|303 |AW |Aruba
-
-|===
-
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|304{blank}footnote:reserved[] |SN |Suriname (República de)
-|305 |PY |Paraguay (República del)
-|306 |FK |Malvinas (Islas) (Falkland)
-|307 | |
-|308 |ED |Ecuador
-|309 |BV |Bolivia (República de) (ENTEL)
-|31 |VE |Venezuela (República Bolivariana de) (CANTV)
-|32 |UY |Uruguay (República Oriental del)
-|33 |AR |Argentina (República)
-|34{blank}footnote:[Bloque atribuido a Chile.] | |Chile
-|340 | |
-|341 | |
-|342 |CL |Chile (TELEX CHILE)
-|343 |CK |Chile (VTR)
-|344 |CZ |Chile (VTR/CM) 
-|345 |CB |Chile (ENTEL-CHILE)
-|346 |CT |Chile (TEXCOM)
-|347 | |
-|348 | |
-|349 | |
-|35 |CO |Colombia (República de)
-|36 |PE |Perú
-|37 | |América Central (código integrado):
-|371 |BZ |Belice
-|372 |GU |Guatemala (República de)
-|373 |SR |El Salvador (República de)
-|374 |HO |Honduras (República de)
-|375 |NU |Nicaragua
-|376 |CR |Costa Rica
-|377 | |
-|378 |PP |Panamá (República de) (Advanced Communication Network, S.A.)
-|379 |PG |Panamá (República de) (INTEL)
-|38 |BR |Brasil (República Federativa del)
-|390{blank}footnote:reserved[] |NA |Curaçao (anteriormente Antillas Neerlandesas)
-|391 |LA |Anguilla
-|392 |WB |Barbados
-|393 |AK |Antigua y Barbuda
-|394 |DO |Dominica (Commonwealth de)
-|395 |GA |Granada
-
-|===
-
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-
-|1 |2 ^.^|3
-
-|396 |MK |Montserrat
-|397 |KC |San Kitts y Nevis
-|398 |LC |Santa Lucía
-|399 |VQ |San Vicente y las Granadinas
-|400 |GC |Montenegro (República de)
-|401 | |
-|402{blank}footnote:reserved[] |LU |Luxemburgo
-|403 |MT |Malta (GTC)
-|404 |P |Portugal
-|405 |GK |Gibraltar
-|406{blank}footnote:reserved[] |MW |Malta (Go p.l.c.)
-|407 |M |Marruecos (Reino de)
-|408 |DZ |Argelia (República Argelina Democrática y Popular)
-|409 |TN |Túnez
-|41 |D |Alemania (República Federal de)
-|42 |F |Francia
-|42 |MC |Mónaco (Principado de)
-|43 |I |Italia
-|44 |NL |Países Bajos (Reino de los)
-|45 |CH |Suiza (Confederación)
-|45 |FL |Liechtenstein (Principado de)
-|46 |B |Bélgica
-|47{blank}footnote:reserved[] |A |Austria
-|480 | |
-|481 | |
-|482 | |
-|483 | |
-|484 | |
-|485 | |
-|486 | |
-|487 | |
-|488 | |
-|489 | |
-|490 |BN |Bahrein (Reino de)
-|491 |IK |Iraq (República del)
-|492 |SY |República Árabe Siria
-|493 |JO |Jordania (Reino Hachemita de)
-|494 |LE |Líbano
-|495 |SJ |Arabia Saudita (Reino de)
-|496 |KT |Kuwait (Estado de)
-|497 |DH |Qatar (Estado de)
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|498 |ON |Omán (Sultanía de)
-|499 | |
-|500 |EI |Irlanda
-|501{blank}footnote:reserved[] |IS |Islandia
-|502{blank}footnote:reserved[] |FA |Feroé (Islas) (Dinamarca)
-|503 |GD |Groenlandia (Dinamarca)
-|504{blank}footnote:reserved[] |VA |Ciudad del Vaticano (Estado de la)
-|505 |SO |San Marino (República de)
-|506 | |
-|507 | |
-|508 | |
-|509 | |
-|51 |G |Reino Unido de Gran Bretaña e Irlanda del Norte
-|52 |E |España
-|530 | |
-|531 | |
-|532 | |
-|533 | |
-|534 | |
-|535 | |
-|536 | |
-|537 |EE |Estonia (República de)
-|538 |LV |Letonia (República de)
-|539 |LT |Lituania (República de)
-|54 |S |Suecia
-|55{blank}footnote:reserved[] |DK |Dinamarca
-|56 |N |Noruega
-|57 |FI |Finlandia
-|580 |X |Servicio móvil marítimo por satélite (disponible)
-|581 |X |Región del satélite del Atlántico Oriental, INMARSAT
-|582 |X |Región del satélite del Pacífico, INMARSAT
-|583 |X |Región del satélite del Océano Indico, INMARSAT
-|584 |X |Región del satélite del Atlántico Occidental, INMARSAT
-|585 |X |Servicio móvil marítimo por satélite (disponible)
-|586 |X |Servicio móvil marítimo por satélite (disponible)
-|587 |X |Servicio móvil marítimo por satélite (disponible)
-|588 |X |Servicio móvil marítimo por satélite (disponible)
-|589 |X |Servicio móvil marítimo por satélite (disponible)
-|590{blank}footnote:reserved[] |AD |Andorra (Principado de)
-|591 | |
-|592 | |
-
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|593 | |
-|594 | |
-|595 | |
-|596 | |
-|597 |MB |La ex República Yugoslava de Macedonia
-|598 |SI |Eslovenia (República de)
-|599 |RH |Croacia (República de)
-|600i)|BH |Bosnia y Herzegovina
-|601 |GR |Grecia
-|602 | |
-|603 | |
-|604 |AB |Albania (República de)
-|605 |CY |Chipre (República de)
-|606 |IL |Israel (Estado de)
-|607 |TR |Turquía
-|608 | |
-|609 | |
-|61{blank}footnote:reserved[] |H |Hungría (República de)
-|62{blank}footnote:reserved[] |YU |Serbia (República de)
-|63{blank}footnote:reserved[] |PL |Polonia (República de)
-|64 |RU |Federación de Rusia
-| |SU{blank}footnote:[Anteriormente atribuido a la antigua URSS (véase el Boletín de Explotación de la UIT No 584 del 15.XI.1994).] |
-|65 |R |Rumania
-|660 | |
-|661 | |
-|662 | |
-|663{blank}footnote:reserved[] |C |República Checa
-|664 | |
-|665 | |
-|666{blank}footnote:reserved[] |SK |República Eslovaca
-|667 | |
-|668 | |
-|669 | |
-|67{blank}footnote:reserved[] |BG |Bulgaria (República de)
-|680 |UX |Ucrania
-|681 |BY |Belarús (República de)
-|682 |MD |Moldova (República de)
-|683 |GI |Georgia
-|684 |AM |Armenia (República de)
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-
-|1 |2 ^.^|3
-
-|685 | |
-|686 | |
-|687 | |
-|688 | |
-|689 | |
-|69{blank}footnote:[Anteriormente atribuido a la antigua República Democrática Alemania (véase el Boletín de Explotación de la UIT No 571 del 1.V.1994).] | |
-|700 |GM |Guam (Estados Unidos de América) (MCI/WUI)
-|701{blank}footnote:reserved[] |FJ |Fiji (República de)
-|702 |FP |Polinesia Francesa (Territorio francés de ultramar)
-|703{blank}footnote:reserved[] |NE |Papua Nueva Guinea
-|704 |HR |Hawai (Estados Unidos de América) (MCI/WUI)
-|705 | |Hawai (Estados Unidos de América) (MCI/WUI)
-|706{blank}footnote:reserved[] |NM |Nueva Caledonia (Territorio francés de ultramar)
-|707 |WF |Wallis y Futuna (Territorio francés de ultramar)
-|708 |HW |Hawai (Estados Unidos de América (MCI/WUI)
-|709 | |Hawai (Estados Unidos de América) (WUH)
-|71 |AA |Australia
-|72 |J |Japón
-|73 |IA |Indonesia (República de)
-|74 |NZ |Nueva Zelandia
-|75{blank}footnote:[Bloque atribuido a la República de Filipinas.] | |Filipinas (República de)
-|750 | |
-|751 |PS |Filipinas (República de) (CAPWIRE)
-|752 |PH |Filipinas (República de) (PHILCOM)
-|753 | |
-|754 |PM |Filipinas (República de) (GMCR)
-|755 | |
-|756 |PN |Filipinas (República de) (ETPI)
-|757 |PI |Filipinas (República de) (RCPI)
-|758 |PU |Filipinas (República de) (PTT)
-|759 | |
-|760 |MN |Marianas del Norte (Islas) (Commonwealth de las)
-|761 |KI |Kiribati (República de)
-|762 | |Tokelau
-|763 |PW |Palau (República de)
-|764 |FM |Micronesia (Estados Federados de)
-|765 |MS |Marshall (Islas) (República de las)
-|766 | |Territorios Exteriores de Australia)
-|767 | |
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-
-|1 |2 ^.^|3
-
-|768 | |
-|769{blank}footnote:reserved[] | |
-|770 |SB |Samoa Norteamericanas
-|771{blank}footnote:reserved[] |NH |Vanuatu (República de)
-|772{blank}footnote:reserved[] |RG |Cook (Islas)
-|773 | |Hawai (Estados Unidos de América)(DATATEL)
-|774 |TV |Tuvalu
-|775 |ZV |Nauru (República de)
-|776 |NF |Niue
-|777{blank}footnote:reserved[] |TS |Tonga (Reino de)
-|778 |HQ |Salomón (Islas)
-|779{blank}footnote:reserved[] |SX |Samoa (Estado Independiente de)
-|780{blank}footnote:reserved[] |BJ |Bangladesh (República Popular de)
-|781{blank}footnote:combination[Las combinaciones restantes de la serie 78 se asignarán sólo después de agotada la reserva de códigos de tres cifras.] | |
-|782{blank}footnote:combination[] | |
-|783{blank}footnote:combination[] | |
-|784 |AI |Azerbaiyana (República)
-|785 |KZ |Kazajstán (República de)
-|786 |UZ |Uzbekistán (República de)
-|787 |TJ |Tayikistán (República de)
-|788 |KH |República Kirguisa
-|789 |TM |Turkmenistán
-|79 |AF |Afganistán
-|800 |MH |Mongolia
-|801 |K |Corea (República de)
-|802 |HX |Hong Kong, China
-|803 |CE |Sri Lanka (República Socialista Democrática de)
-|804 |LS |Lao (República Democrática Popular)
-|805 |VT |Viet Nam (República Socialista de)
-|806{blank}footnote:[Anteriormente atribuido a la antigua República Democrática Popular del Yemen (véase el Boletín de Explotación de la UIT No 579 del 1.IX.1994).] | |
-|807 |KA |Camboya (Reino de)
-|808 |OM |Macao, China
-|809 |BU |Brunei Darussalam
-|81 |IN |India (República de la)
-|82{blank}footnote:reserved[] |PK |Pakistán (República Islámica del)
-|83 |BM |Myanmar (Unión de)
-
-|===
-
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-
-|1 |2 ^.^|3
-
-|84 |MA |Malasia
-|85 |CN |China (República Popular de)
-|86 |TH |Tailandia
-|87 |RS |Singapur (República de)
-|88 |IR |Irán (República Islámica del)
-|890 |BT |Bhután (Reino de)
-|891 |NP |Nepal
-|892 | |
-|893 |EM |Emiratos Árabes Unidos (ETISALAT)
-|894 | |
-|895{blank}footnote:reserved[] |YE |Yemen (República del) 
-|896 |MF |Maldivas (República de)
-|897 | |
-|898 | |
-|899 |KP |República Popular Democrática de Corea
-|900 |SM |Somalí (República Democrática)
-|901 |LY |Jamahiriya Árabe Libia Popular y Socialista
-|902 |ZA |Zambia (República de)
-|903 |UU |Burundi (República de)
-|904 |MI |Malawi
-|905 |NG |Nigeria (República Federal de)
-|906 |SG |Senegal (República del)
-|907 |ZW |Zimbabwe (República de)
-|908 |WK |Namibia (República de)
-|909 |RW |Rwanda (República de)
-|91 |UN |Egipto (República Árabe de)
-|920{blank}footnote:[Atribuido oficialmente pero no puesto aún en servicio.] |ER |Eritrea
-|921 | |
-|922 | |
-|923 | |
-|924 | |
-|925 | |
-|926 | |
-|927 | |
-|928 | |
-|929 | |
-|930 | |
-|931 | |
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|932 | |
-|933 | |
-|934 | |
-|935 | |
-|936 | |
-|937 | |
-|938 |DG |Diego García
-|939{blank}footnote:[Anteriormente atribuido a la antigua Ascensión.] |AV |
-|94 |GH |Ghana
-|95 |SA |Sudafricana (República)
-|960 |HL |Santa Elena
-|961 |RE |Departamentos y territorios franceses del Océano Índico
-|962 |BD |Botswana (República de)
-|963 |LO |Lesotho (Reino de)
-|964 |WD |Swazilandia (Reino de)
-|965 |SZ |Seychelles (República de)
-|966 |IW |Mauricio (República de)
-|967{blank}footnote:reserved[] |ST |Santo Tomé y Príncipe (República Democrática de)
-|968 | |
-|969 |BI |Guinea-Bissau (República de)
-|970 |KN |Camerún (República de)
-|971 |RC |Centroafricana (República)
-|972 |BC |Benin (República de)
-|973 |GO |Gabonesa (República)
-|974 |MQ |Mauritania (República Islámica de)
-|975 |NI |Níger (República del)
-|976 |KD |Chad (República del)
-|977 |TG |Togolesa (República)
-|978 |BF |Burkina Faso
-|979 |DJ |Djibouti (República de)
-|980 |ET |Etiopía (República Democrática Federal de)
-|981 |KG |Congo (República del)
-|982 |CG |República Democrática del Congo
-|983 |CI |Côte d'Ivoire (República de)
-|984 |SD |Sudán (República del)
-|985 |MJ |Malí (República de)
-|986 |MG |Madagascar (República de)
-|987 |KE |Kenya (República de)
-|988 |UG |Uganda (República de)
-
-|===
-
-
-[%unnumbered,cols="^,^,1",options="header"]
-|===
-|CTD |CIRT ^.^|Atribuido a
-|1 |2 ^.^|3
-
-|989 |TZ |Tanzanía (República Unida de) (continente)
-|990 |TA |Zanzíbar (Tanzanía)
-|991 |AN |Angola (República de)
-|992{blank}footnote:reserved[] |MO |Mozambique (República de)
-|993 |CV |Cabo Verde (República de)
-|994 |KO |Comoras (Unión de las)
-|995 |GE |Guinea (República de)
-|996 |GV |Gambia (República de)
-|997 |LI |Liberia (República de)
-|998 |SL |Sierra Leona
-|999 |EG |Guinea Ecuatorial (República de)
-
-|===
-
-
-*Notas:*
-
-. Plan de numeración integrado.
-
-. En el marco de este código nacional, la Administración de telecomunicaciones de la República Popular de China ha comunicado que se ha atribuido el código 855 a la provincia de Taiwan, China (Referencia: Notificación N. 1157 del 10 de diciembre de 1980).
-
-. La Administración de Australia informa que, en el ámbito del código integrado 766, el código télex para:
-+
---
-- Norfolk (Isla de) es 766 3 (NV).
-- Christmas (Isla) es 766 7 (IO).
---
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-data.yaml[]
+----
 
 
 [appendix]
 == Códigos de red de telegramas de dos letras correspondientes a los Códigos de Identificación de Red Télex (CIRT) de una letra
 
-[%unnumbered,cols="^.^,^.^,.^",options="header"]
-|===
-|CIRT |Códigos de red de telegramas de
-dos letras ^.^|País
-
-|A |AU |Austria
-|B |BE |Bélgica
-|C |CS |República Checa
-|D |DP |Alemania (República Federal de)
-|E |ES |España
-|F |FR |Francia
-|G |GB |Reino Unido de Gran Bretaña e Irlanda del Norte
-|H |HU |Hungría (República de)
-|I |IG, IT, IU |Italia
-|J |JP |Japón
-|K |KR |Corea (República de)
-|M |MP |Marruecos (Reino de)
-|N |NO |Noruega
-|P |PC, PJ, PO |Portugal
-|R |RM |Rumania
-|S |SW |Suecia
-
-|===
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-appendix-1.yaml[]
+----
 
 
 [appendix]
 == Países o zonas geográficas para los cuales una información sobre la cesación de servicio de télex ha sido publicada en el Boletín de Explotación de la UIT (N.°)
 
-[%unnumbered,cols="4*"]
-|===
-
-|_BE N.°_ |Países/Zonas geográficas |_BE N.°_ |Países/Zonas geográficas
-
-|681 |Cook (Islas)|859 |Suriname
-|692 |Tonga |859 |Bangladesh
-|693 |Fiji |873 |Trinidad y Tabago
-|702 |Samoa |888 |Mauricio (via Swiss Telex)
-|724 |Vanuatu |889 |Croatia (Gentex via Swiss Telex)
-|734 |Islandia |895 |Alemania (via Swiss Telex)
-|735 |Santo Tomé y Príncipe |900 |Serbia
-|749 |Austria |905 |Reino Unido de Gran Bretaña (via Swiss Telex)
-|754 |Papua Nueva Guinea |906 |Yemen
-|758 |Vaticano |911 |Chipre (via Network Telex (UK))
-|770 |Guyana |911 |Checa
-|770 |Haití|918 |Hong Kong, China (via Easylink)
-|772 |Mozambique |919 |Malta (Go plc)
-|773 |Polonia |920 |Maldives (via Swiss Telex)
-|775 |Andorra |921 |Italia (via Swiss Telex)
-|775 |Nueva Caledonia |923 |Luxemburgo
-|776 |Bosnia y Herzegovina |924 |Philippines (ETPI) (via Swiss Telex)
-|799 |Hungría |931 |Singapur, nuevo operador AimsOne Pte Ltd (via Swiss Telex)
-|806 |Curacao ( anteriormente Antillas Neerlandesas)|931 |Espana (via Easy Link)
-|806 |Feroé (Islas) (Dinamarca)|940 |Bulgaria
-|835 |Dinamarca |941 |Francia (via transit)
-|852 |Pakistán |959 |Lituania (via Telegraf OU (Estonia))
-|853 |Eslovaquia |959 |Bahrein (via Swiss Telex)
-
-
-|===
+[source,yaml]
+----
+include::T-SP-F.68-2011-MSW-appendix-2.yaml[]
+----
 
 
 == ABREVIATURAS
@@ -683,7 +122,7 @@ WUH:: Western Union of Hawaii, Inc.
 == AMENDEMENTS
 
 [%unnumbered,cols="^.^,^.^,^.^",options="header"]
-|=== 
+|===
 |Enmienda N.° |Boletín de Explotación N.° |País o zona geográfica
 
 |1 | |
